# SportsOrganisationManagementSystem

./: .env.example  .gitignore  BACKEND_PLAN.md  FRONTEND_PLAN.md  PRISMA_MIGRATION.md  README.md  UV_SETUP.md  migrate_to_uv.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_tests.py  vercel.json
.github/workflows/: ci.yml
BE/: docker-compose.yml  dockerfile
BE/strapi/: package-lock.json  package.json
FE/: package-lock.json  package.json
FE/src/lib/services/: organizationService.test.ts  organizationService.ts
FE/src/routes/organizations/: +page.svelte  +page.ts
api/: __init__.py  index.py
api/adapters/database/: common.py  in_memory_competition_repository.py  in_memory_game_event_repository.py  in_memory_game_repository.py  in_memory_organization_repository.py  repositories.py  repository_factories.py
api/adapters/web/: routes.py
api/config/: settings.py
api/core/container/: __init__.py  container_globals.py  dependency_container.py  service_provider.py
api/core/domain/entities/: __init__.py  competition.py  enums.py  game.py  game_event.py  organization.py  person.py  player_game_appearance.py  sport.py  team.py
api/core/domain/repositories/: __init__.py  base_repository.py  competition_repository.py  game_event_repository.py  game_repository.py  organization_repository.py  player_repository.py  sport_repository.py  team_repository.py
api/core/services/: __init__.py  competition_management_service.py  competition_management_service_backup.py  competition_management_service_new.py  game_management_service.py  game_management_service_backup.py  game_management_service_new.py  organization_management_service.py  service_result.py
api/core/use_cases/: __init__.py
api/shared/: logger.py
backend/: README.md
frontend/: .env.example  .prettierignore  GENERALIZED_CRUD_README.md  README.md  eslint.config.js  package-lock.json  package.json  svelte-check-output.txt  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/client/: manifest.json  sw.js
frontend/.svelte-kit/output/server/: index.js  manifest.js  remote-entry.js
frontend/.svelte-kit/types/: index.d.ts  route_meta_data.json
frontend/.svelte-kit/vercel-tmp/: manifest.js
frontend/convex/: admin_seed.ts  audit_logs.ts  authorization.ts  crons.ts  schema.ts  seed_permissions.ts  shared_permission_definitions.ts  sync.ts
frontend/convex/_generated/: api.d.ts
frontend/convex/lib/: auth_middleware.ts
frontend/src/: app.css  app.d.ts  app.html  app.js  hooks.server.ts
frontend/src/lib/infrastructure/: AuthorizationProvider.ts  container.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/audit-logs/: +page.svelte
frontend/src/routes/calendar/: +page.svelte
frontend/src/routes/competition-formats/: +page.svelte
frontend/src/routes/competition-results/: +page.svelte
frontend/src/routes/competitions/: +page.svelte
frontend/src/routes/contact/: +page.svelte
frontend/src/routes/crud-test/: +page.svelte
frontend/src/routes/event-types/: +page.svelte
frontend/src/routes/fixture-details-setup/: +page.svelte
frontend/src/routes/fixture-lineups/: +page.svelte
frontend/src/routes/fixture-management/: +page.svelte
frontend/src/routes/fixture-officials/: +page.svelte
frontend/src/routes/fixtures/: +page.svelte
frontend/src/routes/game-event-logs/: +page.svelte
frontend/src/routes/games/: +page.svelte
frontend/src/routes/genders/: +page.svelte
frontend/src/routes/help/: +page.svelte
frontend/src/routes/identification-types/: +page.svelte
frontend/src/routes/live-game-logs/: +page.svelte
frontend/src/routes/live-games/: +page.svelte
frontend/src/routes/official-roles/: +page.svelte
frontend/src/routes/officials/: +page.svelte
frontend/src/routes/organizations/: +page.svelte
frontend/src/routes/player-positions/: +page.svelte
frontend/src/routes/player-profiles/: +page.svelte
frontend/src/routes/player-team-memberships/: +page.svelte
frontend/src/routes/player-transfers/: +page.svelte
frontend/src/routes/players/: +page.svelte
frontend/src/routes/privacy/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/static/: manifest.json  sw.js
tests/: README.md  conftest.py  requirements-test.txt  test_api_routes.py  test_competition_service.py  test_dependency_injection.py  test_extended_api_routes.py  test_game_service.py  test_integration_routes.py  test_organization_service.py
(+613 files in other folders)
